{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 55,
  "lineage": "c1680aec-0f2d-1fc5-b89c-1832fd3a69b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5057a05d1296e52",
            "domain": "vpc",
            "id": "eipalloc-0e5057a05d1296e52",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-63-33-149-199.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.33.149.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-ngw-dev"
            },
            "tags_all": {
              "Name": "eip-ngw-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba9cfae65a212e98",
            "arn": "arn:aws:ec2:eu-west-1:922418836360:instance/i-032518bf81140b41d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "AmazonSSMRoleForInstancesQuickSetup",
            "id": "i-032518bf81140b41d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "6b813dac346abd04",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-017b4870887943677",
            "private_dns": "ip-10-10-24-150.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.24.150",
            "public_ip": "3.252.227.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:922418836360:key/d43cc9f7-363f-4d32-8172-4d4941e8db92",
                "throughput": 125,
                "volume_id": "vol-025c17c712e1b7675",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a45bb1f727c619a",
            "tags": {
              "Name": "ec2-public"
            },
            "tags_all": {
              "Name": "ec2-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01acda6000b5b9df1",
              "sg-097a4ae6858b8431b"
            ]
          },
          "dependencies": [
            "aws_key_pair.dev",
            "aws_subnet.dev",
            "aws_vpc.dev",
            "random_id.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba9cfae65a212e98",
            "arn": "arn:aws:ec2:eu-west-1:922418836360:instance/i-07148e5bfe3c0d512",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07148e5bfe3c0d512",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "6b813dac346abd04",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-071fe4333b0a2b441",
            "private_dns": "ip-10-10-44-176.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.44.176",
            "public_ip": "54.216.225.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:922418836360:key/d43cc9f7-363f-4d32-8172-4d4941e8db92",
                "throughput": 125,
                "volume_id": "vol-0c486b12512ab4526",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1495b8d4bf427d3",
            "tags": {
              "Name": "ec2-private"
            },
            "tags_all": {
              "Name": "ec2-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01acda6000b5b9df1"
            ]
          },
          "dependencies": [
            "aws_key_pair.dev",
            "aws_subnet.dev",
            "aws_vpc.dev",
            "random_id.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:internet-gateway/igw-0029c961f1dbada50",
            "id": "igw-0029c961f1dbada50",
            "owner_id": "922418836360",
            "tags": {
              "Name": "inetrnet gateway"
            },
            "tags_all": {
              "Name": "inetrnet gateway"
            },
            "vpc_id": "vpc-05ec1d947b7658c1d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5057a05d1296e52",
            "association_id": "eipassoc-0a6385148118bac5a",
            "connectivity_type": "public",
            "id": "nat-01fe3120b27154cae",
            "network_interface_id": "eni-0e6244e07570cc04a",
            "private_ip": "10.10.19.52",
            "public_ip": "63.33.149.199",
            "subnet_id": "subnet-08a45bb1f727c619a",
            "tags": {
              "Name": "ngw-dev"
            },
            "tags_all": {
              "Name": "ngw-dev"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.public",
            "aws_subnet.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:route-table/rtb-0e7a79daa8b8f2bff",
            "id": "rtb-0e7a79daa8b8f2bff",
            "owner_id": "922418836360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01fe3120b27154cae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-private"
            },
            "tags_all": {
              "Name": "rtb-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ec1d947b7658c1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.public",
            "aws_nat_gateway.nat",
            "aws_subnet.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:route-table/rtb-0f2b00f763c855069",
            "id": "rtb-0f2b00f763c855069",
            "owner_id": "922418836360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0029c961f1dbada50",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route table"
            },
            "tags_all": {
              "Name": "Public Route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ec1d947b7658c1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0695f99d2019cbd3e",
            "route_table_id": "rtb-0e7a79daa8b8f2bff",
            "subnet_id": "subnet-0b1495b8d4bf427d3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.public",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c839e0615a93870",
            "route_table_id": "rtb-0f2b00f763c855069",
            "subnet_id": "subnet-08a45bb1f727c619a"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_route_table.public",
            "aws_subnet.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:security-group/sg-097a4ae6858b8431b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097a4ae6858b8431b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Public security groupe",
            "name_prefix": "",
            "owner_id": "922418836360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public_sg"
            },
            "tags_all": {
              "Name": "Public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ec1d947b7658c1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:subnet/subnet-08a45bb1f727c619a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a45bb1f727c619a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "922418836360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-public"
            },
            "tags_all": {
              "Name": "sub-public"
            },
            "vpc_id": "vpc-05ec1d947b7658c1d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:subnet/subnet-0b1495b8d4bf427d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1495b8d4bf427d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "922418836360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private"
            },
            "tags_all": {
              "Name": "subnet-private"
            },
            "vpc_id": "vpc-05ec1d947b7658c1d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:vpc/vpc-05ec1d947b7658c1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ccbf2d9c0b1d1fd0",
            "default_route_table_id": "rtb-03339f548b7eb8454",
            "default_security_group_id": "sg-01acda6000b5b9df1",
            "dhcp_options_id": "dopt-0a88b819e245e065c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ec1d947b7658c1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03339f548b7eb8454",
            "owner_id": "922418836360",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    }
  ]
}